ferretin/src/snapshots/ferretin__tests__fuzzy_matching_typo.snap
---
source: ferretin/src/tests.rs
expression: "render_for_tests(Commands::get(\"crate::TestStruct::test_metod\"),\nOutputMode::TestMode)"
---
Could not find 'crate::TestStruct::test_metod'

Did you mean:
<list>
  <item>crate::TestStruct::ASSOCIATED_CONST</item>
  <item>crate::TestStruct::new</item>
  <item>crate::TestStruct::get_field</item>
  <item>crate::TestStruct::increment_count</item>
  <item>crate::submodule</item>
</list>
